parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> lista_decl
Rule 2     lista_decl -> lista_decl declaracion
Rule 3     lista_decl -> declaracion
Rule 4     declaracion -> declaracion_var
Rule 5     declaracion -> declaracion_fun
Rule 6     declaracion_var -> def_tipo ID PUNTOCOMA
Rule 7     declaracion_var -> def_tipo ID LESSTHAN NUM GREATERTHAN PUNTOCOMA
Rule 8     def_tipo -> VACUO
Rule 9     def_tipo -> ENT
Rule 10    declaracion_fun -> def_tipo ID CORCHETEIZQ parametros CORCHETEDER sentencia_comp
Rule 11    parametros -> lista_parametros
Rule 12    parametros -> VACUO
Rule 13    lista_parametros -> lista_parametros COMA param
Rule 14    lista_parametros -> param
Rule 15    param -> def_tipo ID
Rule 16    param -> def_tipo ID LESSTHAN GREATERTHAN
Rule 17    sentencia_comp -> PARENTESISIZQ declaraciones_locales lista_sentencias PARENTESISDER
Rule 18    declaraciones_locales -> declaraciones_locales declaracion_var
Rule 19    declaraciones_locales -> empty
Rule 20    lista_sentencias -> lista_sentencias sentencia
Rule 21    lista_sentencias -> empty
Rule 22    sentencia -> sentencia_expr
Rule 23    sentencia -> sentencia_comp
Rule 24    sentencia -> sentencia_seleccion
Rule 25    sentencia -> sentencia_iteracion
Rule 26    sentencia -> sentencia_retorno
Rule 27    sentencia_expr -> expresion PUNTOCOMA
Rule 28    sentencia_expr -> PUNTOCOMA
Rule 29    sentencia_seleccion -> SI CORCHETEIZQ expresion CORCHETEDER sentencia
Rule 30    sentencia_seleccion -> SI CORCHETEIZQ expresion CORCHETEDER sentencia SINO sentencia
Rule 31    sentencia_iteracion -> MIENTRAS CORCHETEIZQ expresion CORCHETEDER sentencia
Rule 32    sentencia_iteracion -> REP sentencia_comp
Rule 33    sentencia_retorno -> RET PUNTOCOMA
Rule 34    sentencia_retorno -> RET expresion PUNTOCOMA
Rule 35    expresion -> var IGUAL expresion
Rule 36    expresion -> expresion_negada
Rule 37    var -> ID
Rule 38    var -> ID LESSTHAN expresion GREATERTHAN
Rule 39    expresion_negada -> NOT CORCHETEIZQ expresion_logica CORCHETEDER
Rule 40    expresion_negada -> expresion_logica
Rule 41    expresion_logica -> expresion_logica AND expresion_simple
Rule 42    expresion_logica -> expresion_logica AND NOT CORCHETEIZQ expresion_simple CORCHETEDER
Rule 43    expresion_logica -> expresion_simple
Rule 44    expresion_logica -> NOT CORCHETEIZQ expresion_simple CORCHETEDER
Rule 45    expresion_simple -> expresion_simple relop expresion_aditiva
Rule 46    expresion_simple -> expresion_aditiva
Rule 47    relop -> LT
Rule 48    relop -> EQ
Rule 49    expresion_aditiva -> expresion_aditiva addop term
Rule 50    expresion_aditiva -> term
Rule 51    addop -> MAS
Rule 52    addop -> MENOS
Rule 53    term -> term mulop factor
Rule 54    term -> factor
Rule 55    mulop -> MASMAS
Rule 56    mulop -> MENOSMENOS
Rule 57    factor -> CORCHETEIZQ expresion CORCHETEDER
Rule 58    factor -> var
Rule 59    factor -> invocacion
Rule 60    factor -> NUM
Rule 61    invocacion -> ID CORCHETEIZQ argumentos CORCHETEDER
Rule 62    argumentos -> lista_arg
Rule 63    argumentos -> empty
Rule 64    lista_arg -> lista_arg COMA expresion
Rule 65    lista_arg -> expresion
Rule 66    empty -> <empty>

Terminals, with rules where they appear

AND                  : 41 42
COMA                 : 13 64
CORCHETEDER          : 10 29 30 31 39 42 44 57 61
CORCHETEIZQ          : 10 29 30 31 39 42 44 57 61
ENT                  : 9
EQ                   : 48
GREATERTHAN          : 7 16 38
ID                   : 6 7 10 15 16 37 38 61
IGUAL                : 35
LESSTHAN             : 7 16 38
LT                   : 47
MAS                  : 51
MASMAS               : 55
MENOS                : 52
MENOSMENOS           : 56
MIENTRAS             : 31
NOT                  : 39 42 44
NUM                  : 7 60
PARENTESISDER        : 17
PARENTESISIZQ        : 17
PUNTOCOMA            : 6 7 27 28 33 34
REP                  : 32
RET                  : 33 34
SI                   : 29 30
SINO                 : 30
VACUO                : 8 12
error                : 

Nonterminals, with rules where they appear

addop                : 49
argumentos           : 61
declaracion          : 2 3
declaracion_fun      : 5
declaracion_var      : 4 18
declaraciones_locales : 17 18
def_tipo             : 6 7 10 15 16
empty                : 19 21 63
expresion            : 27 29 30 31 34 35 38 57 64 65
expresion_aditiva    : 45 46 49
expresion_logica     : 39 40 41 42
expresion_negada     : 36
expresion_simple     : 41 42 43 44 45
factor               : 53 54
invocacion           : 59
lista_arg            : 62 64
lista_decl           : 1 2
lista_parametros     : 11 13
lista_sentencias     : 17 20
mulop                : 53
param                : 13 14
parametros           : 10
program              : 0
relop                : 45
sentencia            : 20 29 30 30 31
sentencia_comp       : 10 23 32
sentencia_expr       : 22
sentencia_iteracion  : 25
sentencia_retorno    : 26
sentencia_seleccion  : 24
term                 : 49 50 53
var                  : 35 58

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . lista_decl
    (2) lista_decl -> . lista_decl declaracion
    (3) lista_decl -> . declaracion
    (4) declaracion -> . declaracion_var
    (5) declaracion -> . declaracion_fun
    (6) declaracion_var -> . def_tipo ID PUNTOCOMA
    (7) declaracion_var -> . def_tipo ID LESSTHAN NUM GREATERTHAN PUNTOCOMA
    (10) declaracion_fun -> . def_tipo ID CORCHETEIZQ parametros CORCHETEDER sentencia_comp
    (8) def_tipo -> . VACUO
    (9) def_tipo -> . ENT

    VACUO           shift and go to state 7
    ENT             shift and go to state 8

    program                        shift and go to state 1
    lista_decl                     shift and go to state 2
    declaracion                    shift and go to state 3
    declaracion_var                shift and go to state 4
    declaracion_fun                shift and go to state 5
    def_tipo                       shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> lista_decl .
    (2) lista_decl -> lista_decl . declaracion
    (4) declaracion -> . declaracion_var
    (5) declaracion -> . declaracion_fun
    (6) declaracion_var -> . def_tipo ID PUNTOCOMA
    (7) declaracion_var -> . def_tipo ID LESSTHAN NUM GREATERTHAN PUNTOCOMA
    (10) declaracion_fun -> . def_tipo ID CORCHETEIZQ parametros CORCHETEDER sentencia_comp
    (8) def_tipo -> . VACUO
    (9) def_tipo -> . ENT

    $end            reduce using rule 1 (program -> lista_decl .)
    VACUO           shift and go to state 7
    ENT             shift and go to state 8

    declaracion                    shift and go to state 9
    declaracion_var                shift and go to state 4
    declaracion_fun                shift and go to state 5
    def_tipo                       shift and go to state 6

state 3

    (3) lista_decl -> declaracion .

    VACUO           reduce using rule 3 (lista_decl -> declaracion .)
    ENT             reduce using rule 3 (lista_decl -> declaracion .)
    $end            reduce using rule 3 (lista_decl -> declaracion .)


state 4

    (4) declaracion -> declaracion_var .

    VACUO           reduce using rule 4 (declaracion -> declaracion_var .)
    ENT             reduce using rule 4 (declaracion -> declaracion_var .)
    $end            reduce using rule 4 (declaracion -> declaracion_var .)


state 5

    (5) declaracion -> declaracion_fun .

    VACUO           reduce using rule 5 (declaracion -> declaracion_fun .)
    ENT             reduce using rule 5 (declaracion -> declaracion_fun .)
    $end            reduce using rule 5 (declaracion -> declaracion_fun .)


state 6

    (6) declaracion_var -> def_tipo . ID PUNTOCOMA
    (7) declaracion_var -> def_tipo . ID LESSTHAN NUM GREATERTHAN PUNTOCOMA
    (10) declaracion_fun -> def_tipo . ID CORCHETEIZQ parametros CORCHETEDER sentencia_comp

    ID              shift and go to state 10


state 7

    (8) def_tipo -> VACUO .

    ID              reduce using rule 8 (def_tipo -> VACUO .)


state 8

    (9) def_tipo -> ENT .

    ID              reduce using rule 9 (def_tipo -> ENT .)


state 9

    (2) lista_decl -> lista_decl declaracion .

    VACUO           reduce using rule 2 (lista_decl -> lista_decl declaracion .)
    ENT             reduce using rule 2 (lista_decl -> lista_decl declaracion .)
    $end            reduce using rule 2 (lista_decl -> lista_decl declaracion .)


state 10

    (6) declaracion_var -> def_tipo ID . PUNTOCOMA
    (7) declaracion_var -> def_tipo ID . LESSTHAN NUM GREATERTHAN PUNTOCOMA
    (10) declaracion_fun -> def_tipo ID . CORCHETEIZQ parametros CORCHETEDER sentencia_comp

    PUNTOCOMA       shift and go to state 11
    LESSTHAN        shift and go to state 12
    CORCHETEIZQ     shift and go to state 13


state 11

    (6) declaracion_var -> def_tipo ID PUNTOCOMA .

    VACUO           reduce using rule 6 (declaracion_var -> def_tipo ID PUNTOCOMA .)
    ENT             reduce using rule 6 (declaracion_var -> def_tipo ID PUNTOCOMA .)
    $end            reduce using rule 6 (declaracion_var -> def_tipo ID PUNTOCOMA .)
    PARENTESISDER   reduce using rule 6 (declaracion_var -> def_tipo ID PUNTOCOMA .)
    PUNTOCOMA       reduce using rule 6 (declaracion_var -> def_tipo ID PUNTOCOMA .)
    PARENTESISIZQ   reduce using rule 6 (declaracion_var -> def_tipo ID PUNTOCOMA .)
    SI              reduce using rule 6 (declaracion_var -> def_tipo ID PUNTOCOMA .)
    MIENTRAS        reduce using rule 6 (declaracion_var -> def_tipo ID PUNTOCOMA .)
    REP             reduce using rule 6 (declaracion_var -> def_tipo ID PUNTOCOMA .)
    RET             reduce using rule 6 (declaracion_var -> def_tipo ID PUNTOCOMA .)
    ID              reduce using rule 6 (declaracion_var -> def_tipo ID PUNTOCOMA .)
    NOT             reduce using rule 6 (declaracion_var -> def_tipo ID PUNTOCOMA .)
    CORCHETEIZQ     reduce using rule 6 (declaracion_var -> def_tipo ID PUNTOCOMA .)
    NUM             reduce using rule 6 (declaracion_var -> def_tipo ID PUNTOCOMA .)


state 12

    (7) declaracion_var -> def_tipo ID LESSTHAN . NUM GREATERTHAN PUNTOCOMA

    NUM             shift and go to state 14


state 13

    (10) declaracion_fun -> def_tipo ID CORCHETEIZQ . parametros CORCHETEDER sentencia_comp
    (11) parametros -> . lista_parametros
    (12) parametros -> . VACUO
    (13) lista_parametros -> . lista_parametros COMA param
    (14) lista_parametros -> . param
    (15) param -> . def_tipo ID
    (16) param -> . def_tipo ID LESSTHAN GREATERTHAN
    (8) def_tipo -> . VACUO
    (9) def_tipo -> . ENT

    VACUO           shift and go to state 18
    ENT             shift and go to state 8

    def_tipo                       shift and go to state 15
    parametros                     shift and go to state 16
    lista_parametros               shift and go to state 17
    param                          shift and go to state 19

state 14

    (7) declaracion_var -> def_tipo ID LESSTHAN NUM . GREATERTHAN PUNTOCOMA

    GREATERTHAN     shift and go to state 20


state 15

    (15) param -> def_tipo . ID
    (16) param -> def_tipo . ID LESSTHAN GREATERTHAN

    ID              shift and go to state 21


state 16

    (10) declaracion_fun -> def_tipo ID CORCHETEIZQ parametros . CORCHETEDER sentencia_comp

    CORCHETEDER     shift and go to state 22


state 17

    (11) parametros -> lista_parametros .
    (13) lista_parametros -> lista_parametros . COMA param

    CORCHETEDER     reduce using rule 11 (parametros -> lista_parametros .)
    COMA            shift and go to state 23


state 18

    (12) parametros -> VACUO .
    (8) def_tipo -> VACUO .

    CORCHETEDER     reduce using rule 12 (parametros -> VACUO .)
    ID              reduce using rule 8 (def_tipo -> VACUO .)


state 19

    (14) lista_parametros -> param .

    COMA            reduce using rule 14 (lista_parametros -> param .)
    CORCHETEDER     reduce using rule 14 (lista_parametros -> param .)


state 20

    (7) declaracion_var -> def_tipo ID LESSTHAN NUM GREATERTHAN . PUNTOCOMA

    PUNTOCOMA       shift and go to state 24


state 21

    (15) param -> def_tipo ID .
    (16) param -> def_tipo ID . LESSTHAN GREATERTHAN

    COMA            reduce using rule 15 (param -> def_tipo ID .)
    CORCHETEDER     reduce using rule 15 (param -> def_tipo ID .)
    LESSTHAN        shift and go to state 25


state 22

    (10) declaracion_fun -> def_tipo ID CORCHETEIZQ parametros CORCHETEDER . sentencia_comp
    (17) sentencia_comp -> . PARENTESISIZQ declaraciones_locales lista_sentencias PARENTESISDER

    PARENTESISIZQ   shift and go to state 27

    sentencia_comp                 shift and go to state 26

state 23

    (13) lista_parametros -> lista_parametros COMA . param
    (15) param -> . def_tipo ID
    (16) param -> . def_tipo ID LESSTHAN GREATERTHAN
    (8) def_tipo -> . VACUO
    (9) def_tipo -> . ENT

    VACUO           shift and go to state 7
    ENT             shift and go to state 8

    param                          shift and go to state 28
    def_tipo                       shift and go to state 15

state 24

    (7) declaracion_var -> def_tipo ID LESSTHAN NUM GREATERTHAN PUNTOCOMA .

    VACUO           reduce using rule 7 (declaracion_var -> def_tipo ID LESSTHAN NUM GREATERTHAN PUNTOCOMA .)
    ENT             reduce using rule 7 (declaracion_var -> def_tipo ID LESSTHAN NUM GREATERTHAN PUNTOCOMA .)
    $end            reduce using rule 7 (declaracion_var -> def_tipo ID LESSTHAN NUM GREATERTHAN PUNTOCOMA .)
    PARENTESISDER   reduce using rule 7 (declaracion_var -> def_tipo ID LESSTHAN NUM GREATERTHAN PUNTOCOMA .)
    PUNTOCOMA       reduce using rule 7 (declaracion_var -> def_tipo ID LESSTHAN NUM GREATERTHAN PUNTOCOMA .)
    PARENTESISIZQ   reduce using rule 7 (declaracion_var -> def_tipo ID LESSTHAN NUM GREATERTHAN PUNTOCOMA .)
    SI              reduce using rule 7 (declaracion_var -> def_tipo ID LESSTHAN NUM GREATERTHAN PUNTOCOMA .)
    MIENTRAS        reduce using rule 7 (declaracion_var -> def_tipo ID LESSTHAN NUM GREATERTHAN PUNTOCOMA .)
    REP             reduce using rule 7 (declaracion_var -> def_tipo ID LESSTHAN NUM GREATERTHAN PUNTOCOMA .)
    RET             reduce using rule 7 (declaracion_var -> def_tipo ID LESSTHAN NUM GREATERTHAN PUNTOCOMA .)
    ID              reduce using rule 7 (declaracion_var -> def_tipo ID LESSTHAN NUM GREATERTHAN PUNTOCOMA .)
    NOT             reduce using rule 7 (declaracion_var -> def_tipo ID LESSTHAN NUM GREATERTHAN PUNTOCOMA .)
    CORCHETEIZQ     reduce using rule 7 (declaracion_var -> def_tipo ID LESSTHAN NUM GREATERTHAN PUNTOCOMA .)
    NUM             reduce using rule 7 (declaracion_var -> def_tipo ID LESSTHAN NUM GREATERTHAN PUNTOCOMA .)


state 25

    (16) param -> def_tipo ID LESSTHAN . GREATERTHAN

    GREATERTHAN     shift and go to state 29


state 26

    (10) declaracion_fun -> def_tipo ID CORCHETEIZQ parametros CORCHETEDER sentencia_comp .

    VACUO           reduce using rule 10 (declaracion_fun -> def_tipo ID CORCHETEIZQ parametros CORCHETEDER sentencia_comp .)
    ENT             reduce using rule 10 (declaracion_fun -> def_tipo ID CORCHETEIZQ parametros CORCHETEDER sentencia_comp .)
    $end            reduce using rule 10 (declaracion_fun -> def_tipo ID CORCHETEIZQ parametros CORCHETEDER sentencia_comp .)


state 27

    (17) sentencia_comp -> PARENTESISIZQ . declaraciones_locales lista_sentencias PARENTESISDER
    (18) declaraciones_locales -> . declaraciones_locales declaracion_var
    (19) declaraciones_locales -> . empty
    (66) empty -> .

    VACUO           reduce using rule 66 (empty -> .)
    ENT             reduce using rule 66 (empty -> .)
    PARENTESISDER   reduce using rule 66 (empty -> .)
    PUNTOCOMA       reduce using rule 66 (empty -> .)
    PARENTESISIZQ   reduce using rule 66 (empty -> .)
    SI              reduce using rule 66 (empty -> .)
    MIENTRAS        reduce using rule 66 (empty -> .)
    REP             reduce using rule 66 (empty -> .)
    RET             reduce using rule 66 (empty -> .)
    ID              reduce using rule 66 (empty -> .)
    NOT             reduce using rule 66 (empty -> .)
    CORCHETEIZQ     reduce using rule 66 (empty -> .)
    NUM             reduce using rule 66 (empty -> .)

    declaraciones_locales          shift and go to state 30
    empty                          shift and go to state 31

state 28

    (13) lista_parametros -> lista_parametros COMA param .

    COMA            reduce using rule 13 (lista_parametros -> lista_parametros COMA param .)
    CORCHETEDER     reduce using rule 13 (lista_parametros -> lista_parametros COMA param .)


state 29

    (16) param -> def_tipo ID LESSTHAN GREATERTHAN .

    COMA            reduce using rule 16 (param -> def_tipo ID LESSTHAN GREATERTHAN .)
    CORCHETEDER     reduce using rule 16 (param -> def_tipo ID LESSTHAN GREATERTHAN .)


state 30

    (17) sentencia_comp -> PARENTESISIZQ declaraciones_locales . lista_sentencias PARENTESISDER
    (18) declaraciones_locales -> declaraciones_locales . declaracion_var
    (20) lista_sentencias -> . lista_sentencias sentencia
    (21) lista_sentencias -> . empty
    (6) declaracion_var -> . def_tipo ID PUNTOCOMA
    (7) declaracion_var -> . def_tipo ID LESSTHAN NUM GREATERTHAN PUNTOCOMA
    (66) empty -> .
    (8) def_tipo -> . VACUO
    (9) def_tipo -> . ENT

    PARENTESISDER   reduce using rule 66 (empty -> .)
    PUNTOCOMA       reduce using rule 66 (empty -> .)
    PARENTESISIZQ   reduce using rule 66 (empty -> .)
    SI              reduce using rule 66 (empty -> .)
    MIENTRAS        reduce using rule 66 (empty -> .)
    REP             reduce using rule 66 (empty -> .)
    RET             reduce using rule 66 (empty -> .)
    ID              reduce using rule 66 (empty -> .)
    NOT             reduce using rule 66 (empty -> .)
    CORCHETEIZQ     reduce using rule 66 (empty -> .)
    NUM             reduce using rule 66 (empty -> .)
    VACUO           shift and go to state 7
    ENT             shift and go to state 8

    lista_sentencias               shift and go to state 32
    declaracion_var                shift and go to state 33
    empty                          shift and go to state 34
    def_tipo                       shift and go to state 35

state 31

    (19) declaraciones_locales -> empty .

    VACUO           reduce using rule 19 (declaraciones_locales -> empty .)
    ENT             reduce using rule 19 (declaraciones_locales -> empty .)
    PARENTESISDER   reduce using rule 19 (declaraciones_locales -> empty .)
    PUNTOCOMA       reduce using rule 19 (declaraciones_locales -> empty .)
    PARENTESISIZQ   reduce using rule 19 (declaraciones_locales -> empty .)
    SI              reduce using rule 19 (declaraciones_locales -> empty .)
    MIENTRAS        reduce using rule 19 (declaraciones_locales -> empty .)
    REP             reduce using rule 19 (declaraciones_locales -> empty .)
    RET             reduce using rule 19 (declaraciones_locales -> empty .)
    ID              reduce using rule 19 (declaraciones_locales -> empty .)
    NOT             reduce using rule 19 (declaraciones_locales -> empty .)
    CORCHETEIZQ     reduce using rule 19 (declaraciones_locales -> empty .)
    NUM             reduce using rule 19 (declaraciones_locales -> empty .)


state 32

    (17) sentencia_comp -> PARENTESISIZQ declaraciones_locales lista_sentencias . PARENTESISDER
    (20) lista_sentencias -> lista_sentencias . sentencia
    (22) sentencia -> . sentencia_expr
    (23) sentencia -> . sentencia_comp
    (24) sentencia -> . sentencia_seleccion
    (25) sentencia -> . sentencia_iteracion
    (26) sentencia -> . sentencia_retorno
    (27) sentencia_expr -> . expresion PUNTOCOMA
    (28) sentencia_expr -> . PUNTOCOMA
    (17) sentencia_comp -> . PARENTESISIZQ declaraciones_locales lista_sentencias PARENTESISDER
    (29) sentencia_seleccion -> . SI CORCHETEIZQ expresion CORCHETEDER sentencia
    (30) sentencia_seleccion -> . SI CORCHETEIZQ expresion CORCHETEDER sentencia SINO sentencia
    (31) sentencia_iteracion -> . MIENTRAS CORCHETEIZQ expresion CORCHETEDER sentencia
    (32) sentencia_iteracion -> . REP sentencia_comp
    (33) sentencia_retorno -> . RET PUNTOCOMA
    (34) sentencia_retorno -> . RET expresion PUNTOCOMA
    (35) expresion -> . var IGUAL expresion
    (36) expresion -> . expresion_negada
    (37) var -> . ID
    (38) var -> . ID LESSTHAN expresion GREATERTHAN
    (39) expresion_negada -> . NOT CORCHETEIZQ expresion_logica CORCHETEDER
    (40) expresion_negada -> . expresion_logica
    (41) expresion_logica -> . expresion_logica AND expresion_simple
    (42) expresion_logica -> . expresion_logica AND NOT CORCHETEIZQ expresion_simple CORCHETEDER
    (43) expresion_logica -> . expresion_simple
    (44) expresion_logica -> . NOT CORCHETEIZQ expresion_simple CORCHETEDER
    (45) expresion_simple -> . expresion_simple relop expresion_aditiva
    (46) expresion_simple -> . expresion_aditiva
    (49) expresion_aditiva -> . expresion_aditiva addop term
    (50) expresion_aditiva -> . term
    (53) term -> . term mulop factor
    (54) term -> . factor
    (57) factor -> . CORCHETEIZQ expresion CORCHETEDER
    (58) factor -> . var
    (59) factor -> . invocacion
    (60) factor -> . NUM
    (61) invocacion -> . ID CORCHETEIZQ argumentos CORCHETEDER

    PARENTESISDER   shift and go to state 36
    PUNTOCOMA       shift and go to state 44
    PARENTESISIZQ   shift and go to state 27
    SI              shift and go to state 45
    MIENTRAS        shift and go to state 47
    REP             shift and go to state 48
    RET             shift and go to state 49
    ID              shift and go to state 52
    NOT             shift and go to state 53
    CORCHETEIZQ     shift and go to state 46
    NUM             shift and go to state 60
